Fix overflow in large message

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@ body {
   width: 100vw;
   font-family: sans-serif;
   font-size: 13px;
+}
+
+#root{
   display: flex;
   justify-content: center;
 }
